youfull/objects/User_Report_Config__c.object
<CustomObject>
    <fields>
        <fullName>Columns_To_Display__c</fullName>
        <label>Columns To Display</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Sort__c</fullName>
        <label>Default Sort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Title_Filter__c</fullName>
        <description>Defines the default Title level that should be displayed. This is applicable only to Zone and Division Manager users.</description>
        <inlineHelpText>Defines the default Title level that should be displayed. This is applicable only to Zone and Division Manager users.</inlineHelpText>
        <label>Default Title Filter</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Genealogy_Criteria__c</fullName>
        <label>Genealogy Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Recruits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Recruits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Removed_Reps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Removed Reps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ldr_Smry_Criteria__c</fullName>
        <label>Ldr Smry Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_N_Mail_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next N Mail Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Criteria__c</fullName>
        <label>Order Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rep_Criteria__c</fullName>
        <label>Rep Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Report Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_Not_Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_on_Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_below_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders_at_Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total_Orders_received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved_Minimum_Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current_Balance_Past_Due_Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Sales_Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additions_Reinstatements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development_LOA_1_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline_Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATD_Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking_and_Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title_Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday_Anniversaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance_Past_Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal_Sales_Qual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures_Not_Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st_Order_Award_Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not_Using_ALMReports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM_Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured_Avon_Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Report Config</label>
    <listViews>
        <fullName>AGNIESZKA_Reports</fullName>
        <columns>NAME</columns>
        <columns>Columns_To_Display__c</columns>
        <columns>Report_Id__c</columns>
        <columns>Report_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ABOBA</value>
        </filters>
        <label>AGNIESZKA Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Report Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>